--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -68,8 +68,8 @@
        <td></td>
        {% endif %}
 
-       <td><a href="/animal_pro_edit/{{ani.id}}" class="btn btn-sm btn-warning"/>Edit</td>
-       <td><a href="/animal_pro_delete/{{ani.id}}" class="btn btn-sm btn-danger"/>Delete</td>
+       <td><a href="/animal_pro_edit/{{ani.animal_id}}" class="btn btn-sm btn-warning"/>Edit</td>
+       <td><a href="/animal_pro_delete/{{ani.animal_id}}" class="btn btn-sm btn-danger"/>Delete</td>
       </tr>
       {% endfor %}
     </tbody>
