--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -49,6 +49,15 @@
           <a class="dropdown-item" href='/list_animal_profile'>Animal_Profile List</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Pregnancy_Detail
+</a>
+<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+  <a class="dropdown-item" href='/insert_pregnency_detail'>Add Pregnancy_Detail</a>
+  <a class="dropdown-item" href='/list_pregnency_detail'>Animal Pregnancy_Detail</a>
+</div>
+      </li>
       
     </ul>
     <div class=" my-2 my-lg-0">
