--- a/livestockapp/templates/animal_category/list.html
+++ b/livestockapp/templates/animal_category/list.html
@@ -4,7 +4,7 @@
 <div class="container my-3">
   <h4 class="text-center alert alert-info py-3">List of Category</h4>
   {% if tasks %}
-  <table class="table table-bordered">
+  <table class="table table-bordered" id="animalCategory">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -38,4 +38,21 @@
   <h4 class="text-center alert alert-warning">No Record</h4>
 {% endif %}
 </div>    
+<script>
+  $(document).ready(function() {
+    // Initialize DataTable
+    $('#animalCategory').DataTable({
+      "paging": true,      // Enable pagination
+      "ordering": true,    // Enable sorting
+      "searching": true,   // Enable search
+      "info": true,        // Show info about entries and pagination
+      "responsive": true,  // Enable responsive behavior
+      "columnDefs": [
+        // Specify column-specific options if needed
+        // Example: {"targets": [0], "searchable": false, "orderable": false}
+      ]
+    });
+  });  
+</script>
+
 {% endblock content %}
