still Issues are Found. Need to fix them

--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -92,13 +92,12 @@
     <div class="row">
       <div class="col">
         <label class=" control-label">Token No :<span style="color:red; font-weight:bold;">*</span></label>
-<<<<<<< HEAD
+
         <input type="text" class="form-control" name="animal_id" required maxlength="50" value="{{animal.animal_id}}" readonly hidden/>
         <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" >
-=======
-        <input type="text" class="form-control" name="id" required maxlength="50" value="{{animal.id}}" readonly hidden/>
-        <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" readonly>
->>>>>>> 246b0b806a026e0eb5392089eb6d5efe6e08e609
+        {% comment %} <input type="text" class="form-control" name="id" required maxlength="50" value="{{animal.id}}" readonly hidden/>
+        <input type="text" class="form-control" id="token_no" name="token_no" value= "{{animal.token_no}}" readonly> {% endcomment %}
+
       </div>
       <div class="col">
           <label class=" control-label">Name :<span style="color:red; font-weight:bold;">*</span></label>
